// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the expense summary correctly with more than one expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`should render the expense summary correctly with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.00
  </h1>
</div>
`;
